--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <td>  <img src="images/Chandra.jpg" alt="Chandra profile picture"></td>
       <td><h1>Chandra Thebe</h1>
       <p><em>Founder and CEO of <strong><a href="https://www.appbrewery.co>">Apewalk</a></strong>.</em></p>
-      <p>I want to do something in the blockchain domain.</p></td>
+      <p>I build software and robots, not for fun 😒.</p></td>
     </tr>
   </table>
   <hr>
