--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </tr>
   </table>
   <hr>
-  <h3>Books and Teaching</h3>
+  <h3>Favourite Books</h3>
   <ul>
     <li>Currency wars</li>
     <li>Homo Sapiens</li>
